--- a/offgridplanner/static/css/main.css
+++ b/offgridplanner/static/css/main.css
@@ -1306,6 +1306,10 @@ form .form-control:focus {
     box-shadow: 0 0 0 0.25rem rgba(31, 86, 125, 0.1);
 }
 
+.form-check-input {
+    margin-right: .5em;
+}
+
 form .form-check-input:focus {
     -webkit-box-shadow: 0 0 0 0.25rem rgba(31, 86, 125, 0.1);
     box-shadow: 0 0 0 0.25rem rgba(31, 86, 125, 0.1);
@@ -2052,7 +2056,7 @@ nav.navbar .dropdown-menu li {
     flex-direction: row;
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
-    justify-content: space-between;
+    justify-content: flex-left;
     padding: 0rem 0.05rem 0.75rem;
     /* added by me :) */
     font-size: 1.2rem;
