Fix optimized/fixed capacity widget

--- a/offgridplanner/templates/widgets/battery_design_widget.html
+++ b/offgridplanner/templates/widgets/battery_design_widget.html
@@ -1,10 +1,17 @@
 {% load i18n %}
 <div class="btn-group d-flex" role="group">
-    <input type="radio" class="btn-check" name="{{ widget.name }}" id="{{ widget.name }}_optimized" value="true" autocomplete="off"
-           {% if widget.value == 'true' %}checked{% endif %}>
+    <input type="radio" class="btn-check"
+           name="{{ widget.name }}" id="{{ widget.name }}_optimized"
+           value="true" autocomplete="off"
+           onchange="{{ widget.attrs.onchange }};"
+           {% if widget.attrs.value == 'true' %}checked{% endif %}
+            >
     <label class="btn btn-outline-secondary" for="{{ widget.name }}_optimized">Optimized Capacity</label>
 
-    <input type="radio" class="btn-check" name="{{ widget.name }}" id="{{ widget.name }}_fixed" value="false" autocomplete="off"
-           {% if widget.value == 'false' %}checked{% endif %}>
+    <input type="radio" class="btn-check"
+           name="{{ widget.name }}" id="{{ widget.name }}_fixed"
+           value="false" autocomplete="off"
+           onchange="{{ widget.attrs.onchange }};"
+           {% if widget.attrs.value == 'false' %}checked{% endif %}>
     <label class="btn btn-outline-secondary" for="{{ widget.name }}_fixed">Fixed Capacity</label>
 </div>
