--- a/offgridplanner/templates/pages/energy_system_design.html
+++ b/offgridplanner/templates/pages/energy_system_design.html
@@ -29,7 +29,7 @@
             {% else %}
             <div class="row">
               <div class="input-group">
-                <span class="input-group-text">{{ field.label | safe }}</span>
+                <span class="input-group-text" id="{{field.name}}_label">{{ field.label | safe }}</span>
                 {{ field|add_class:"form-control" }}
                 <span class="input-group-text" id="{{field.name}}_unit">{{ field.field.widget.attrs.unit }}</span>
               </div>
@@ -205,7 +205,7 @@
             {% else %}
             <div class="row">
               <div class="input-group">
-                <span class="input-group-text">{{ field.label | safe }}</span>
+                <span class="input-group-text" id="{{field.name}}_label">{{ field.label | safe }}</span>
                 {{ field|add_class:"form-control" }}
                 <span class="input-group-text" id="{{field.name}}_unit">{{ field.field.widget.attrs.unit }}</span>
               </div>
@@ -231,7 +231,7 @@
             {% else %}
             <div class="row">
               <div class="input-group">
-                <span class="input-group-text">{{ field.label | safe }}</span>
+                <span class="input-group-text" id="{{field.name}}_label">{{ field.label | safe }}</span>
                 {{ field|add_class:"form-control" }}
                 <span class="input-group-text" id="{{field.name}}_unit">{{ field.field.widget.attrs.unit }}</span>
               </div>
@@ -255,7 +255,7 @@
             {% else %}
             <div class="row">
               <div class="input-group">
-                <span class="input-group-text">{{ field.label | safe }}</span>
+                <span class="input-group-text" id="{{field.name}}_label">{{ field.label | safe }}</span>
                 {{ field|add_class:"form-control" }}
                 <span class="input-group-text" id="{{field.name}}_unit">{{ field.field.widget.attrs.unit }}</span>
               </div>
@@ -278,7 +278,7 @@
             {% else %}
             <div class="row">
               <div class="input-group">
-                <span class="input-group-text">{{ field.label | safe }}</span>
+                <span class="input-group-text" id="{{field.name}}_label">{{ field.label | safe }}</span>
                 {{ field|add_class:"form-control" }}
                 <span class="input-group-text" id="{{field.name}}_unit">{{ field.field.widget.attrs.unit }}</span>
               </div>
@@ -302,7 +302,7 @@
             {% else %}
             <div class="row">
               <div class="input-group">
-                <span class="input-group-text">{{ field.label | safe }}</span>
+                <span class="input-group-text" id="{{field.name}}_label">{{ field.label | safe }}</span>
                 {{ field|add_class:"form-control" }}
                 <span class="input-group-text" id="{{field.name}}_unit">{{ field.field.widget.attrs.unit }}</span>
               </div>
