--- a/offgridplanner/static/css/main.css
+++ b/offgridplanner/static/css/main.css
@@ -1908,29 +1908,20 @@ nav.navbar .dropdown-menu li {
     border-radius: 100px;
 }
 
-.wizard__steps li.step-1::before {
-    content: "1";
-}
-
-.wizard__steps li.step-2::before {
-    content: "2";
-}
-
-.wizard__steps li.step-3::before {
-    content: "3";
-}
-
-.wizard__steps li.step-4::before {
-    content: "4";
-}
-
-.wizard__steps li.step-5::before {
-    content: "5";
-}
-
-.wizard__steps li.step-6::before {
-    content: "6";
-}
+.wizard__steps li:nth-child(1)::before {
+content: "1"; }
+.wizard__steps li:nth-child(2)::before {
+content: "2"; }
+.wizard__steps li:nth-child(3)::before {
+content: "3"; }
+.wizard__steps li:nth-child(4)::before {
+content: "4"; }
+.wizard__steps li:nth-child(5)::before {
+content: "5"; }
+.wizard__steps li:nth-child(6)::before {
+content: "6"; }
+.wizard__steps li:nth-child(7)::before {
+content: "7"; }
 
 .wizard__steps li::before {
     content: attr(data-step-number);
@@ -2028,7 +2019,7 @@ nav.navbar .dropdown-menu li {
     border-radius: 8px;
     -webkit-box-shadow: 0px 0px 16px rgba(31, 86, 125, 0.08);
     box-shadow: 0px 0px 16px rgba(31, 86, 125, 0.08);
-    height: 34rem;
+    height: 40rem;
     margin-bottom: 1.5rem;
 }
 
